src/objects/Risk__c.object
<CustomObject>
    <description>Risks help understand the status from many sources rather than a single project manager.  Risks, similar to status reports, can/should be entered by project team members.  By create a new &quot;app&quot; in your Salesforce instance, you can segregate the tabs for project team members (i.e. - create an app called &quot;Project Team Member&quot; with 3 tabs Team Member Assignments, Risks, Status Reports).  Help and Training will guide you through creating new apps.  In Enterprise Edition, you can then make that app the default for a team member.</description>
    <fields>
        <fullName>EstimatedCostImpact__c</fullName>
        <label>Estimated Cost Impact</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RiskDescription__c</fullName>
        <label>Risk Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RiskMitigationPlan__c</fullName>
        <label>Risk Mitigation Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RiskProbability__c</fullName>
        <label>Risk Probability (%)</label>
        <picklist>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RiskResolutionDate__c</fullName>
        <label>Risk Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RiskScore__c</fullName>
        <label>Risk Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RiskStatus__c</fullName>
        <label>Risk Status</label>
        <picklist>
            <picklistValues>
                <fullName>Anticipated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Mitigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Scope Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RiskType__c</fullName>
        <label>Risk Type</label>
        <picklist>
            <picklistValues>
                <fullName>Economic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process/Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution/implementation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <inlineHelpText>Please enter the impact of the risk on the project.</inlineHelpText>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Future Need</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Risk</label>
    <nameField>
        <displayFormat>Risk-{MM}{YYYY}{0}</displayFormat>
        <label>Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>